--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -337,94 +337,23 @@ body {
 		}
 	}
 
-	.el-drawer__wrapper {
-		@keyframes el-drawer-fade-enter-in {
-			from {
-				transform: translateX(100vw);
-			}
-
-			to {
-				transform: translateX(0);
-			}
-		}
-		@keyframes btt-drawer-in {
-			from {
-				transform: translateY(100%);
-			}
-
-			to {
-				transform: translateY(0);
-			}
-		}
-
-		&:not(.pushup) {
-			transition: transform 0.3s cubic-bezier(0.09, 0.83, 0.79, 0.99);
-		}
-
-		&.drawer-push {
-			transform: translateX(0);
-		}
-
-		&.push-left {
-			transform: translateX(0);
-		}
-
-		&.pop-right {
-			pointer-events: none;
-			background: var(--wt-trade-bg);
-
-			// transition: transform 0.8s cubic-bezier(0.1, 0.7, 0.1, 1);
-			// transform: translateX(-30vw)!important;
-			// will-change: transform;
-			.el-drawer__container {
-				animation: 0;
-			}
-		}
-
+	.el-overlay {
 		&.el-drawer-fade-enter-active:not(.pushup) {
-			border-left: 1px solid var(--wt-transparent05);
-			transform: translateX(100vw);
+			border-left: 1px solid var(--transparent05);
+			transform: translateX(0);
 			background: transparent;
-			animation: none;
 		}
 
-		&.el-drawer-fade-enter-active:not(.pushup) .el-drawer__container {
-			background: transparent;
-
-			.el-drawer.rtl {
-				animation: none;
-				overflow: hidden;
-			}
+		&.el-drawer-fade-leave-to .rtl{
+			transform: translateX(100%);
 		}
-
-		&:not(.pushup) .el-drawer__open .el-drawer.rtl {
-			animation: none;
-			overflow: hidden;
-		}
-		&.el-drawer-fade-enter-to:not(.pushup) {
-			// animation: el-drawer-fade-enter-in 0.3s cubic-bezier(0.36, 0.66, 0.04, 1);
-			animation: none;
-		}
-
-		&.el-drawer-fade-leave-active:not(.pushup) {
-			border-left: 1px solid var(--wt-transparent05);
-			animation: none;
-
-			.el-drawer__container {
-				background: transparent;
-
-				.el-drawer.rtl {
-					animation: none;
-				}
-			}
-		}
-
-		&.el-drawer-fade-leave-to:not(.pushup) {
-			animation: none;
+		&.el-drawer-fade-enter-from, &.el-drawer-fade-leave-to{
+			opacity: 1;
 		}
 	}
 
 	.el-drawer {
+		// transition: transform .3s cubic-bezier(0.09, 0.83, 0.79, 0.99);
 		--el-drawer-bg-color: rgb(var(--color-bg-base));
 		--el-drawer-padding-primary: var(--el-dialog-padding-primary, 20px);
 		background-color: var(--el-drawer-bg-color);
