--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1,64 +1,86 @@
 .bt-default {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--transparent05);
-    border: 1px solid var(--transparent10);
-    color: var(--color-text-main);
-    padding: 4px 12px;
-    border-radius: 3px;
-    font-size: 12px;
-    &:hover {
-        background-color: var(--transparent10);
-        border: 1px solid var(--transparent20);
-        color: var(--color-text-main);
-    }
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--transparent05);
+	border: 1px solid var(--transparent10);
+	color: var(--color-text-main);
+	padding: 4px 12px;
+	border-radius: 3px;
+	font-size: 12px;
+	&:hover {
+		background-color: var(--transparent10);
+		border: 1px solid var(--transparent20);
+		color: var(--color-text-main);
+	}
 }
 
-.bt-green,.bt-primary {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(var(--color-green));
-    border: 1px solid rgb(var(--color-green));
-    color: white;
-    padding: 4px 12px;
-    border-radius: 3px;
-    font-size: 12px;
-    &:hover {
-        background-color: rgb(var(--color-green)/0.9);
-    }
+.bt-green,
+.bt-primary {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(var(--color-green));
+	border: 1px solid rgb(var(--color-green));
+	color: white;
+	padding: 4px 12px;
+	border-radius: 3px;
+	font-size: 12px;
+	&:hover {
+		background-color: rgb(var(--color-green) / 0.9);
+	}
 }
 
 .bt-red {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(var(--color-red));
-    border: 1px solid rgb(var(--color-red));
-    color: white;
-    padding: 4px 12px;
-    border-radius: 3px;
-    font-size: 12px;
-    &:hover {
-        background-color: rgb(var(--color-red)/0.9);
-    }
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(var(--color-red));
+	border: 1px solid rgb(var(--color-red));
+	color: white;
+	padding: 4px 12px;
+	border-radius: 3px;
+	font-size: 12px;
+	&:hover {
+		background-color: rgb(var(--color-red) / 0.9);
+	}
 }
 
 .glass {
-    position: relative;
-    &::before {
-        // background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
-        background-image: linear-gradient(90deg, #1e6f4d, #309993, #112d6b);
-        filter: blur(60px);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        content: '';
-        z-index: -1;
-        opacity: 0.6;
-        // transition: all 0.3s ease;
-    }
+	position: relative;
+	&::before {
+		// background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
+		background-image: linear-gradient(90deg, #1e6f4d, #309993, #112d6b);
+		filter: blur(60px);
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		z-index: -1;
+		opacity: 0.6;
+		// transition: all 0.3s ease;
+	}
+}
+
+.global-form {
+	.form-item {
+		@apply flex flex-col;
+		label {
+			@apply py-2;
+		}
+		.el-input {
+            --el-color-primary:rgb(var(--color-brand));
+			.el-input__wrapper {
+				.el-input__inner {
+					--el-input-inner-height: 46px;
+					@apply text-lg;
+                    &::placeholder{
+                        @apply text-sm;
+                    }
+				}
+			}
+		}
+	}
 }
