--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -38,7 +38,7 @@ html:root {
 	--el-button-active-bg-color: var(--el-color-primary);
 	--el-button-active-border-color: var(--el-color-primary);
 
-	--el-overlay-color-lighter: rgb(var(--color-bg-mask)/0.3);
+	--el-overlay-color-lighter: rgb(var(--color-bg-mask) / 0.3);
 }
 .light body {
 	.el-popover {
@@ -71,8 +71,8 @@ html:root {
 			background: #f7f7fd !important;
 		}
 	}
-	.el-dialog{
-		&::before{
+	.el-dialog {
+		&::before {
 			background-image: none;
 		}
 	}
@@ -258,7 +258,7 @@ body {
 		--el-dialog-font-line-height: var(--el-font-line-height-primary);
 		--el-dialog-padding-primary: 0;
 		--el-dialog-border-radius: 6px;
-		
+
 		overflow: hidden;
 		border: 1px solid var(--transparent10);
 		position: relative;
@@ -351,34 +351,34 @@ body {
 	}
 
 	@keyframes bgmask {
-		from{
+		from {
 			background-color: transparent;
 		}
-		to{
+		to {
 			background-color: var(--el-overlay-color-lighter);
 		}
 	}
 
 	.el-overlay {
-		
 		background-color: var(--el-overlay-color-lighter);
 		&.el-drawer-fade-enter-active {
 			background-color: transparent;
 			animation: bgmask 2s forwards;
 		}
 
-		&.el-drawer-fade-leave-to{
+		&.el-drawer-fade-leave-to {
 			transition: all var(--el-transition-duration);
 			background-color: transparent;
 			// animation: bgmask .6s reverse forwards;
 		}
-		&.el-drawer-fade-enter-from, &.el-drawer-fade-leave-to{
+		&.el-drawer-fade-enter-from,
+		&.el-drawer-fade-leave-to {
 			opacity: 1;
 		}
 	}
 
-	.push-btt{
-		.el-overlay{
+	.push-btt {
+		.el-overlay {
 			// background-color: var(--el-overlay-color-lighter);
 		}
 	}
@@ -428,10 +428,49 @@ body {
 		color: var(--el-button-active-text-color);
 		outline: none;
 	}
+	.el-button:hover {
+		border-color: transparent;
+		outline: none;
+	}
+	.el-message {
+		max-width: 90vw;
+		overflow: hidden;
+		border-radius: 8px;
+		&::before {
+			background-image: var(--bg-linear-90);
+			// filter: blur(60px);
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			content: '';
+			z-index: 0;
+			opacity: 0.15;
+		}
+		&.el-message--info {
+			--el-message-border-color: var(--transparent00);
+			--el-message-text-color: rgb(var(--color-text-grey));
+			background: linear-gradient(to left,var(--transparent05),var(--transparent05)),linear-gradient(to left,rgb(var(--color-bg-base)),rgb(var(--color-bg-base)));
+		}
+		&.el-message--success {
+			background: linear-gradient(to left,var(--transparent05),var(--transparent05)),linear-gradient(to left,rgb(var(--color-bg-base)),rgb(var(--color-bg-base)));
+			--el-message-border-color: var(--transparent00);
+		}
+		&.el-message--warning {
+			background: linear-gradient(to left,var(--transparent05),var(--transparent05)),linear-gradient(to left,rgb(var(--color-bg-base)),rgb(var(--color-bg-base)));
+			--el-message-border-color: var(--transparent00);
+		}
+		&.el-message--error {
+			background: linear-gradient(to left,var(--transparent05),var(--transparent05)),linear-gradient(to left,rgb(var(--color-bg-base)),rgb(var(--color-bg-base)));
+			--el-message-border-color: var(--transparent00);
+		
+		}
+	}
 }
 
 @media (max-width: 999px) {
-	.el-dialog{
+	.el-dialog {
 		min-width: 90%;
 	}
 	.el-drawer {
@@ -443,7 +482,7 @@ body {
 		.el-drawer__body {
 			border-radius: 0;
 		}
-		&.btt{
+		&.btt {
 			border-radius: 16px 16px 0 0;
 			border-top: 1px solid var(--transparent10);
 		}
